# rpg-explainer

./: .gitignore  README.md  build_rpg_language.py  examples.md  main.py  pyproject.toml
docs/: start.md  treesitter_rpg_grammar.md
examples/: sample_order.rpgle
src/rpg_explainer/: __init__.py  __main__.py  analysis.py  cli.py  llm_client.py  parser.py  prompts.py
tests/: __init__.py  test_basic_analysis.py  test_fixed_form.py
tree-sitter-rpg/: grammar.js  package.json
