[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-explainer"
version = "0.1.0"
description = "A CLI tool to parse and explain IBM ILE RPG (RPGLE) programs using Tree-sitter and Claude LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RPG Explainer Team"}
]
keywords = ["rpg", "rpgle", "ibm-i", "as400", "tree-sitter", "langchain", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "tree-sitter>=0.21.0,<0.22.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
rpg-explain = "rpg_explainer.cli:main"

[project.urls]
Homepage = "https://github.com/example/rpg-explainer"
Repository = "https://github.com/example/rpg-explainer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
